# barh

./: .gitignore  Cargo.toml  README.md
examples/: complex.json  minimal.json
src/: config.rs  error.rs  font.rs  lib.rs  main.rs
src/layouts/: adaptors.rs  bars_layout.rs  haxis_layout.rs  layout.rs  main_layout.rs  mod.rs  title_layout.rs  vaxis_layout.rs
tests/configs/: annotations.json  small_values.json
