[package]
name = "barh"
version = "0.0.1"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
keywords = ["charts", "graph", "bar", "generator", "svg"]
license = "GPL-2.0"
description = "A simple horizontal bar chart generator."

[dependencies]
svgdom = "0.1.0"
serde_json = "0.8"
rusttype = "0.2"

[lib]
doctest = false
